Fixed body overflow and side scrolling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /* Application-wide styling */
 body {
-    /* background-color: #FDFDFF; */
     background-color: #0E1111;
+    overflow-x: hidden;
 }
 
 
